fixed the bib issue

--- a/papers/A_3D_Framework_for_Improving_Low_Latency_Multi_Channel_Live_Streaming.html
+++ b/papers/A_3D_Framework_for_Improving_Low_Latency_Multi_Channel_Live_Streaming.html
@@ -97,6 +97,20 @@
   
   <a href="../pdfs/A_3D_Framework_for_Improving_Low_Latency_Multi_Channel_Live_Streaming.pdf" class="download-btn">Download Full PDF</a>
 
+  <h3>Bibliographic Reference</h3>
+  <div class="bib-block">
+    <button class="copy-btn" onclick="copyBib()">Copy</button>
+    <div class="copy-hint" id="copyHint">Copied successfully!</div>
+    <pre class="bib-content">@inproceedings{aiersilan20253d,
+  title={A 3D Framework for Improving Low-Latency Multi-Channel Live Streaming},
+  author={Aiersilan, Aizierjiang and Wang, Zhiqiang},
+  booktitle={2025 IEEE International Conference on Multimedia and Expo Workshops (ICMEW)},
+  pages={1--6},
+  year={2025},
+  organization={IEEE}
+}</pre>
+  </div>
+
   <script>
     function copyBib() {
       const bibText = document.querySelector('.bib-content').textContent;
