--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Academic Research Archive
 ---
 
 <h1>Academic Research Archive</h1>
-<p>This archive contains a collection of academic papers available for indexing by Google Scholar and other academic search engines. Each paper includes structured metadata for proper citation and discovery.</p>
+<p>This archive serves as a repository for storing and sharing research articles, peer-reviewed academic papers, proposals, preprints, and academic tutorial papers.</p>
 
 {% for paper in site.data.papers %}
 <div class="paper">
